Remove not used signal handling for ending a thread Ensure that if we send 'sigint' to mysqld started with --gdb it's taken down nicely Clear THR_THD when thread ends to get a valid stack trace if we die late Bug #37869 mysqld stopped reacting to SIGINT when run with --gdb